load("@rules_task//:defs.bzl", "cmd", "task")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@infrastructure-requirements//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements.lock",
)

task(
    name = "pulumi",
    cmds = [
        cmd.shell(
            cmd.executable("//tools/pulumi"),
            "$CLI_ARGS",
        ),
    ],
    cwd = "{{ os.environ.get('BUILD_WORKING_DIRECTORY', os.getcwd()) }}",
    env = {
        "PULUMI_PYTHON_CMD": "python",
    },
    deps = [
        requirement("pulumi"),
        requirement("pulumi-command"),
        requirement("pulumi-kubernetes"),
    ],
)

task(
    name = "provisioner-deploy",
    cmds = [
        cmd.shell(
            cmd.executable(":pulumi"),
            "up",
            "--stack",
            "dev",
            "--diff",
            "--color",
            "always",
            "--yes",
        ),
    ],
    cwd = "{{ os.environ['BUILD_WORKSPACE_DIRECTORY'] }}/infrastructure/stacks/provisioner",
)
