load("@rules_task//:defs.bzl", "cmd", "task")
load("@pip-setup//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

task(
    name = "pulumi",
    cmds = [
        cmd.shell(
            cmd.executable("//tools/pulumi"),
            "$CLI_ARGS",
        ),
    ],
    cwd = "{{ os.environ.get('BUILD_WORKING_DIRECTORY', os.getcwd()) }}",
    env = {
        "PULUMI_PYTHON_CMD": "python",
    },
    deps = [
        requirement("pulumi"),
        requirement("pulumi-command"),
        requirement("pulumi-kubernetes"),
    ],
)

task(
    name = "provisioner-deploy",
    cmds = [
        "unset BUILD_WORKING_DIRECTORY",
        cmd.shell(
            cmd.executable(":pulumi"),
            "up",
            "--stack",
            "mvgijssel/provisioner/dev",
            "--diff",
            "--color",
            "always",
            "--yes",
        ),
    ],
    cwd = "{{ os.environ['BUILD_WORKSPACE_DIRECTORY'] }}/infrastructure/stacks/provisioner",
)
