[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pulumi = "^3.21.0"
pulumi-kubernetes = "^3.12.1"
onepasswordconnectsdk = "^1.1.0"
pulumi-vault = "^5.1.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
