[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "3.67.1"
pulumi-kubernetes = "^3.12.1"
onepasswordconnectsdk = "^1.1.0"
pulumi-vault = "^5.1.0"
pulumi-docker = "^3.2.0"
pulumi-command = "^0.4.1"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
