load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@occupancy_component//:requirements.bzl", "requirement")
load("//tools/pytest:pytest.bzl", "py_pytest_test")
load("//tools/command:command.bzl", "command")

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements.lock",
)

py_library(
    name = "lib",
    srcs = [
        "custom_components/occupancy/__init__.py",
        "custom_components/occupancy/const.py",
    ],
    data = [
        "custom_components/occupancy/manifest.json",
    ],
    imports = ["."],
)

py_pytest_test(
    name = "test",
    size = "small",
    srcs = [
        "tests/conftest.py",
        "tests/test_init.py",
    ],
    imports = ["."],
    deps = [
        ":lib",
        requirement("pytest-homeassistant-custom-component"),
    ],
)

command(
    name = "tilt",
    command_src = "@tilt_arm64//:tilt_binary",
    cwd = "{{ os.path.dirname(runfiles_path('$(rlocationpath :Tiltfile)')) }}",
    data = [
        ":Tiltfile",
        ":docker-compose.yml",
        "//tools/tilt:post_build/Tiltfile",
    ],
)

# TODO: can we also remove attached volumes when doing "down"?
command(
    name = "dev",
    after_cmd = """
    subprocess.run([cmd, "down"])
    """,
    args = [
        "up",
        "--port",
        "10350",
    ],
    command_src = ":tilt",
)
