load("@pdm-setup//:requirements.bzl", "requirement")
load("//tools/pytest:pytest.bzl", "py_pytest_test")
load("@rules_task//:defs.bzl", "cmd", "task")

py_library(
    name = "lib",
    srcs = [
        "custom_components/occupancy/__init__.py",
        "custom_components/occupancy/binary_sensor.py",
        "custom_components/occupancy/const.py",
    ],
    data = [
        "custom_components/occupancy/manifest.json",
    ],
    imports = ["."],
)

py_pytest_test(
    name = "test",
    size = "small",
    srcs = [
        "tests/conftest.py",
        "tests/test_init.py",
    ],
    args = ["--asyncio-mode=auto"],
    imports = ["."],
    deps = [
        ":lib",
        requirement("pytest-homeassistant-custom-component"),
        requirement("tzdata"),
    ],
)

task(
    name = "tilt",
    cmds = [
        cmd.shell(
            cmd.executable("//tools/tilt"),
            "$CLI_ARGS",
        ),
    ],
    cwd = "{{ os.environ['BUILD_WORKSPACE_DIRECTORY'] }}/occupancy_component",
    data = [
        ":Tiltfile",
        ":docker-compose.yml",
        "//tools/tilt:post_build/Tiltfile",
    ],
)

task(
    name = "dev",
    cmds = [
        "$tilt up --port 10350",
        {"defer": "$tilt down"},
    ],
    env = {
        "tilt": cmd.executable(":tilt"),
    },
)
