load("//tools/pyinfra:defs.bzl", "pyinfra_run")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")

pyinfra_run(
    name = "provision",
    srcs = [
        "deploys/editor/tasks/install_editor.py",
        "deploys/languages/tasks/install_languages.py",
        "deploys/ssh/tasks/install_ssh.py",
        "deploys/terminal/tasks/install_terminal.py",
        "deploys/utilities/tasks/install_utilities.py",
        "deploys/workflow/tasks/install_workflow.py",
        "helpers/home_link.py",
        "helpers/macos.py",
        "helpers/onepassword.py",
    ],
    args = [
        "--data install_editor=True",
        "--data install_terminal=True",
        "--data install_languages=True",
        "--data install_ssh=True",
        "--data install_utilities=True",
        "--data install_workflow=True",
    ],
    data = [
        "deploys/editor/files/keybindings.json",
        "deploys/editor/files/settings.json",
        "deploys/languages/files/tool-versions",
        "deploys/ssh/files/gitconfig",
        "deploys/ssh/files/ssh/config",
        "deploys/terminal/files/bash_profile",
        "deploys/terminal/files/bashrc",
        "deploys/terminal/files/config/atuin/config.toml",
        "deploys/terminal/files/profile",
        "deploys/terminal/files/shell_snippets/benchmark.sh",
        "deploys/terminal/files/zshrc",
    ],
    deploy = "deploy.py",
    inventory = "inventory.py",
)

pkg_tar(
    name = "loose_debs",
    srcs = select({
        "@platforms//cpu:arm64": ["@inspec_arm64//file:file"],
        "@platforms//cpu:x86_64": ["@inspec_amd64//file:file"],
    }),
    mode = "0644",
)

pkg_tar(
    name = "pkg",
    extension = "tar",
    deps = [
        ":loose_debs",
    ],
)

install_pkgs(
    name = "pkgs_installed",
    image_tar = "@ubuntu_base//image",
    installables_tar = ":pkg",
    output_image_name = "pkgs_installed",
)

# TODO: Download openssh-client dependency
