load("//tools/pyinfra:defs.bzl", "pyinfra_run")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit_layer")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pyinfra_run(
    name = "provision",
    srcs = [
        "deploys/editor/tasks/install_editor.py",
        "deploys/languages/tasks/install_languages.py",
        "deploys/ssh/tasks/install_ssh.py",
        "deploys/terminal/tasks/install_terminal.py",
        "deploys/utilities/tasks/install_utilities.py",
        "deploys/workflow/tasks/install_workflow.py",
        "helpers/home_link.py",
        "helpers/macos.py",
        "helpers/onepassword.py",
    ],
    args = [
        "--data install_editor=True",
        "--data install_terminal=True",
        "--data install_languages=True",
        "--data install_ssh=True",
        "--data install_utilities=True",
        "--data install_workflow=True",
    ],
    data = [
        "deploys/editor/files/keybindings.json",
        "deploys/editor/files/settings.json",
        "deploys/languages/files/tool-versions",
        "deploys/ssh/files/gitconfig",
        "deploys/ssh/files/ssh/config",
        "deploys/terminal/files/bash_profile",
        "deploys/terminal/files/bashrc",
        "deploys/terminal/files/config/atuin/config.toml",
        "deploys/terminal/files/profile",
        "deploys/terminal/files/shell_snippets/benchmark.sh",
        "deploys/terminal/files/zshrc",
    ],
    deploy = "deploy.py",
    inventory = "inventory.py",
)

container_image(
    name = "loose_debs_image",
    base = "@ubuntu_base//image",
    files = [
        "@inspec_arm64//file",
    ],
)

container_run_and_commit_layer(
    name = "loose_debs_layer",
    commands = ["dpkg -i /inspec.deb"],
    image = ":loose_debs_image.tar",
)

download_pkgs(
    name = "debs",
    image_tar = "@ubuntu_base//image",
    packages = [
        "openssh-client",
    ],
)

install_pkgs(
    name = "debs_installed",
    image_tar = "@ubuntu_base//image",
    installables_tar = ":debs.tar",
    output_image_name = "debs_installed",
)

pkg_tar(
    name = "inspec_tar",
    srcs = [
        "controls/workstation.rb",
        "inspec.yml",
    ],
    package_dir = "/project",
    # Otherwise all directories are flattened:
    # <https://github.com/bazelbuild/rules_docker/issues/317>
    strip_prefix = ".",
)

# inspec exec . -t ssh://maarten@host.docker.internal -i ~/.ssh/id_rsa
container_image(
    name = "inspec_image",
    base = ":debs_installed.tar",
    layers = [":loose_debs_layer"],
    tars = [
        ":inspec_tar",
    ],
    workdir = "/project",
)
