load("@rules_task//task:defs.bzl", "cmd", "task")

task(
    name = "deploy",
    cmds = [
        "nixos-rebuild switch --flake $flake#hypervisor --target-host maarten@192.168.1.30 --build-host maarten@192.168.1.30 --fast --use-remote-sudo",
    ],
    cwd = "$BUILD_WORKSPACE_DIRECTORY/apps/hypervisor",
    env = {
        "NIX_SSHOPTS": "-o ForwardAgent=yes",
        "flake": cmd.file("flake.nix"),
    },
)
